# memory

./: .gitignore  App.qml  CMakeLists.txt  README.md  main.cpp  memory_en_US.ts  memory_zh_CN.ts  qml.qrc  setupscript.iss.in  win32_logo.rc
.github/workflows/: windows-latest.yml
data/: student.csv  student.json  teachers.json  timelinedata.json
data/students/: 0.json  17.json  18.json  39.json  gen.cpp
qml/: FluMediaPlayer.qml  MMediaPlayer.qml  MTableView.qml  Qt5FluMediaPlayer.qml  Qt5Mediaplayer.qml  TeacherCard.qml  activitypage.qml  addactivitypicturewindow.qml  addpicturedialog.qml  addreviewdialog.qml  addteacherpetphrasewindow.qml  changebirthdaywindow.qml  changeprofiledialog.qml  checkuploadwindow.qml  crashwindow.qml  datamanagepage.qml  dataprovidepage.qml  dataupdatepage.qml  homePage.qml  main.qml  newactivitywindow.qml  pictureviewwindow.qml  profilewindow.qml  settingsPage.qml  showrunningresultwindow.qml  studentPage.qml  taskpage.qml  teacherPage.qml  timelinePage.qml  videoplaywindow.qml
res/: defaultversions.json
src/: FluentPlayer.cpp  FluentPlayer.h  activityhelper.cpp  activityhelper.h  activityupdater.cpp  activityupdater.h  app_dump.h  base.cpp  base.h  bigfiledownloader.cpp  bigfiledownloader.h  commandrunner.cpp  commandrunner.h  database.cpp  database.h  databaseinitializer.cpp  databaseinitializer.h  datamanagerhelper.cpp  datamanagerhelper.h  dataupdatehelper.cpp  dataupdatehelper.h  direncodemanager.cpp  direncodemanager.h  direncoder.cpp  direncoder.h  downloader.cpp  downloader.h  downloadmanager.cpp  downloadmanager.h  downloadthread.cpp  downloadthread.h  encodethread.cpp  encodethread.h  filelistreader.cpp  filelistreader.h  firstframepicker.cpp  firstframepicker.h  imageprovider.cpp  imageprovider.h  maintool.cpp  (+24 more)
text/: preview.html  preview.md  terms.html  terms.md  terms.rtf
